Fixing canvas scale issue when window is too small
Also making toolbar a bit smaller to fit more icons easier.

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -32,11 +32,13 @@ body {
   flex: 1;
   display: flex;
   width: 100%;
+  height: calc(100vh - 48px);
 }
 
 .canvas-wrapper {
   flex: 1;
   display: flex;
+  overflow: hidden;
 }
 
 canvas {
